Remove pre padding, fixing a few layout issues

--- a/github-dark.css
+++ b/github-dark.css
@@ -84,7 +84,7 @@
   transition: none !important;
  }
  /* === needs padding === */
- .content,.wikistyle,#gollum-footer .gollum-minibutton a,pre {
+ .content,.wikistyle,#gollum-footer .gollum-minibutton a {
   padding: 10px !important;
  }
  .markdown-body code {
@@ -659,7 +659,7 @@
  .sunken-menu a.selected .octicon,.sidebar-milestone-widget .title, .feed-icon a .octicon,.numbers-summary .num, a.minibutton,
  .select-menu-item.selected>.octicon,.new-repo .octicon,.minibutton:hover .octicon, .tabnav-tab.selected .octicon,
  .minibutton i, .notifications .pull-request-notification .type-icon,.notifications-list a, div.select-menu-modal a.select-menu-item-text,
- span.minibutton,.full-commit .browse-button,.merge-status-icon .mega-octicon:before,
+ span.minibutton,.full-commit .browse-button,.merge-status-icon .mega-octicon:before, .release-label a,
  #network .explain b,.repo-menu a.selected:after,.navigation-focus .octicon:not(.octicon-arrow-right):not(.type-icon) {
   color: #eee !important;
  }
